# delivery_service

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
app/: Dockerfile  Makefile  logging.yaml  main.py  middleware.py
app/api/v1/: parcel.py  schemas.py
app/core/: conf.py  di_container.py
app/db/models/: parcel.py
app/migrations/: env.py
app/migrations/versions/: 84863c84a128_initial.py
app/services/: common.py  parcel.py
app/task_producer/: producer.py
delivery_app/: Dockerfile  Makefile  env.example  exeption_handlers.py  logging.template.yaml  main.py
delivery_app/api/v1/: __init__.py  parcel.py  schemas.py  statistics.py
delivery_app/core/: conf.py  di_container.py  exceptions.py
delivery_app/db/: db.py
delivery_app/db/cache/: redis_client.py
delivery_app/db/log_db/: mongo_db.py
delivery_app/db/models/: company.py  parcel.py
delivery_app/dto/: parcel_dto.py  statics_dto.py
delivery_app/migrations/: env.py
delivery_app/migrations/versions/: 63b7ee17e2d0_comapny_added.py
delivery_app/services/: cache.py  company.py  parcel.py  statistics.py
delivery_app/task_producer/: producer.py
register_app/: Dockerfile  Makefile  celery_app.py  currency_rate.py  env.example  task.py
register_app/core/: conf.py  di_container.py  logger.py
register_app/db/: cache.py  db.py  mongo_db.py
register_app/db/models/: parcel.py
register_app/utils/: cost_log.py  currency_rate.py
tests/: Dockerfile  Makefile  conftest.py
tests/api/: test_parcels.py  test_static.py
tests/services/: test_cache_service.py  test_parcel_service.py  test_statistics_service.py
