[tool.poetry]
name = "delivery-service"
version = "0.1.0"
description = ""
authors = ["Denis Kalbasov <kds-ru@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
punq = "^0.7.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
orjson = "^3.10.18"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
alembic = "^1.16.2"
aiomysql = "^0.2.0"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
pymysql = "^1.1.1"
cryptography = "^45.0.5"
pyyaml = "^6.0.2"
itsdangerous = "^2.2.0"
celery = "^5.5.3"
kombu = "^5.5.4"
aiohttp = "^3.12.13"
redis = "^6.2.0"
motor = "^3.7.1"
uvloop = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
pytest-mock = "^3.14.1"


[tool.poetry.group.register_app.dependencies]
celery = "^5.5.3"
kombu = "^5.5.4"
aiohttp = "^3.12.13"
httpx = "^0.28.1"
redis = "^6.2.0"
sqlalchemy = "^2.0.41"
pymysql = "^1.1.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pymongo = "^4.13.2"
punq = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
known_first_party = ["app", "delivery_service"]
line_length = 100

[tool.mypy]
exclude = "^tests/"

[tool.flake8]
max-line-length = 100
exclude = [
    "migrations/*",
    ".venv",
    "__pycache__",
    ".git",
]
